--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -96,7 +96,7 @@
                          Background="Transparent"
                          BorderThickness="0 0 0 1"/>
                 <TextBox x:Name="CommandInput"
-                         KeyDown="CommandInput_KeyDown"
+                         PreviewKeyDown="CommandInput_KeyDown"
                          Grid.Column="1" 
                          Margin="0 0 30 0"
                          VerticalAlignment="Center" 
