--- a/App.xaml
+++ b/App.xaml
@@ -1,20 +1,8 @@
 ﻿<Application x:Class="DropShell.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DropShell" xmlns:tb="http://www.hardcodet.net/taskbar"
+             xmlns:local="clr-namespace:DropShell"
              ShutdownMode="OnExplicitShutdown">
-    <Application.Resources>
-        <tb:TaskbarIcon x:Key="TrayIcon"
-                IconSource="/favicon.ico"
-                ToolTipText="DropShell"
-                MenuActivation="RightClick">
-            <tb:TaskbarIcon.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="Open" Click="Open_Click"/>
-                    <MenuItem Header="Exit" Click="Exit_Click"/>
-                </ContextMenu>
-            </tb:TaskbarIcon.ContextMenu>
-        </tb:TaskbarIcon>
-
-    </Application.Resources>
+	<Application.Resources>
+	</Application.Resources>
 </Application>
